--- a/public/src/reorder-orders-list.html
+++ b/public/src/reorder-orders-list.html
@@ -55,7 +55,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <ul>
               <template is="dom-repeat" items="{{data}}" as="item">
 
-                  <li>[[item.name.displayName]]</li>
+                  <li>[[item.customer]]</li>
 
               </template>
             </ul>
